2012-02-13  Mike Frysinger  <vapier@gentoo.org>

	* man/.gitignore: Add generate_mans.deps

2012-02-13  Mike Frysinger  <vapier@gentoo.org>

	* man/grpck.8.xml: Relocate space.

2012-02-13  Mike Frysinger  <vapier@gentoo.org>

	* libmisc/copydir.c: Add missing #include <stdarg.h>

2012-02-12  Nicolas François  <nicolas.francois@centraliens.net>

	* NEWS: Set release date.

2012-02-12  Nicolas François  <nicolas.francois@centraliens.net>

	* po/shadow.pot, man/po/shadow-man-pages.pot: Regenerated.
	* po/*.po, man/po/*.po: Updated PO files.

2012-02-11  Giuseppe Sacco  <eppesuig@debian.org>

	* man/po/it.po: Updated after review.

2012-02-11  Nicolas François  <nicolas.francois@centraliens.net>

	* man/it/Makefile.am: Activate all manpages.
	* man/po/it.po: Fix formal issues (end of lines).

2012-02-11  Giuseppe Sacco  <eppesuig@debian.org>

	* man/po/it.po: Updated to 1173t.

2012-01-30  Nicolas François  <nicolas.francois@centraliens.net>

	* man/useradd.8.xml, man/su.1.xml, man/po/da.po, man/po/ru.po,
	man/po/fr.po, man/po/de.po, man/po/sv.po, man/po/pl.po,
	man/po/it.po, man/po/shadow-man-pages.pot, man/po/zh_CN.po: Fix
	two typos. Thanks to Giuseppe Sacco. Unfuzzy translations
	* po/kk.po, po/nb.po, po/el.po, po/ca.po, po/ja.po: Re-generate.
	* man/login.defs.d/ENV_PATH.xml, man/login.defs.d/ENV_SUPATH.xml:
	Fix typo.

2012-01-28  Innocent De Marchi  <tangram.peces@gmail.com>

	* po/ca.po: Updated to 557t.

2012-01-28  Nicolas François  <nicolas.francois@centraliens.net>

	* NEWS, configure.in, man/da/Makefile.am, man/Makefile.am: Build
	manpages with more than 50% translated messages.
	* man/fr/Makefile.am: Add missing manpages: chgpasswd.8,
	groupmems.8, nologin.8, sulogin.8.
	* man/de/Makefile.am: Add missing manpages: chage.1, chgpasswd.8,
	chpasswd.8, expiry.1, faillog.5, faillog.8, getspnam.3, gpasswd.1,
	groupadd.8, groupdel.8, groupmems.8, groupmod.8, grpck.8,
	grpconv.8, grpunconv.8, gshadow.5, lastlog.8, login.defs.5,